# cardgame

./: pyproject.toml
.github/workflows/: cardgame.yml  main.yml
card_game/: card.py  game.py  main.py  player.py  rule.py  rummy.py
tests/: test_cards.py  test_rummy.py
