[tool.poetry]
name = "card-game"
version = "0.1.0"
description = ""
authors = ["MaxiFrank <maxine.m.liu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.10.0"
mypy = "^1.13.0"
pylint = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
